/*
 * Copyright 2021 CloudWeGo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package instparam;

option go_package = "protobuf/instparam";

message SubMessage {
    int64 id = 1;
    string value = 2;
}
message Message {
    int64 id = 1;
    string value = 2;
    repeated SubMessage subMessages = 3;
}

// 复杂参数
message ObjReq {
    Message msg = 1;
    map<string, SubMessage> msgMap = 2;
    repeated SubMessage subMsgs = 3;
    repeated Message msgs = 4;
    string flagMsg = 5;
}

message ObjResp {
    Message msg = 1;
    map<string, SubMessage> msgMap = 2;
    repeated SubMessage subMsgs = 3;
    repeated Message msgs = 4;
    string flagMsg = 5;
}
