/*
 * Copyright 2021 CloudWeGo Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stability;

option go_package = "protobuf/stability";

import "instparam.proto";

enum TestEnum {
    ZERO = 0;
    FIRST = 1;
    SECOND = 2;
    THIRD = 3;
    FOURTH = 4;
}

message STRequest {
    string Name = 1;
    bool on = 2;
    double d = 7;
    string str = 9;
    map<string, string> stringMap = 10;
    repeated string stringList = 11;
    TestEnum e = 13;
    string flagMsg = 14;
    string framework = 15;
    string mockCost = 16;
}

message STResponse {
    string str = 1;
    map<string, string> mp = 2;
    string flagMsg = 3;
}

service STService {
    rpc testSTReq(STRequest) returns (STResponse);
    rpc testObjReq(instparam.ObjReq) returns (instparam.ObjResp);
}
